[project]
name = "toomoss-py"
version = "0.1.1"
description = "Python Wrapper for Toomoss USB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[project.urls]
homepage = "https://github.com/mikisama/toomoss_py"
